# nemo-qml-plugin-settings

./: .gitignore  CMakeLists.txt  README.md  nemo-qml-plugin-settings.pro  nemo-qml-plugin-settings.qbs
rpm/: nemo-qml-plugin-settings.spec
src/: CMakeLists.txt  plugin.cpp  qmldir  settings.cpp  settings.h
